# MRTD_Automatisation_GPIB

./: CMakeLists.txt  README.md  README.txt
include/: core.h  gpib.h  ui.h
src/: gpib_ctrl.c  job_manager.c  main.c  services.c  todo.txt
src/gpib/: gpib_ctrl.c  gpib_read.c  gpib_write.c
src/gpib/gpib_linux/: gpib_linux_ctrl.c  gpib_linux_write.c
src/hmi/: #gui.glade#  gui.glade  hmi_ui.bak  hmi_ui.c
